--- a/question-service/src/main/resources/application.properties
+++ b/question-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=question-service
+server.port=8081
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=${URL_DB}
@@ -6,3 +7,4 @@ spring.datasource.username=${NAME_DB}
 spring.datasource.password=${PASSWORD_DB}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
